--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "author": "Thomas Caserta <thomas.caserta@gig.com>",
   "license": "MIT",
   "dependencies": {
-    "acorn-walk": "^6.1.1",
+    "@babel/parser": "^7.6.2",
+    "@babel/traverse": "^7.6.2",
     "magic-string": "^0.25.2",
-    "rollup-pluginutils": "^2.6.0"
+    "rollup-pluginutils": "^2.8.2"
   },
   "devDependencies": {
-    "typescript": "^3.4.5",
-    "rollup": "^1.11.3"
+    "@babel/types": "^7.6.1",
+    "@types/babel__traverse": "^7.0.7",
+    "rollup": "^1.11.3",
+    "typescript": "^3.4.5"
   }
 }
